# simple-chat

./: Cargo.toml  USAGE.md  todo.md
.github/workflows/: rust.yml
src/: lib.rs
src/client/: main.rs
src/server/: connection.rs  main.rs  state.rs
src/transport/: messages.rs
tests/: integration_test.rs
